--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -12,9 +12,6 @@
 \usepackage{float}
 \usepackage{enumerate}
 
-% \title{\textbf{威斯敏斯特信心告白} \\ {\small \href{https://westminsterstandards.org/westminster-confession-of-faith/}{The Westminster Confession of Faith}}}
-% \author[1]{译者：Job Zhao}
-% \date{\today}
 \linespread{1.5}
 
 \renewcommand{\abstractname}{\Large\textbf{绪言}}
@@ -2326,9 +2323,46 @@
 % So Esau swore to Jacob and sold him the birthright.
 所以以扫向雅各发誓并将长子权卖给了他。
 % Then Jacob gave some bread and lentil stew to Esau, who ate and drank and then got up and went away. Thus Esau despised his birthright.
-\N 然后雅各将一些饼和扁豆汤给以扫，他吃了喝了，然后就起身走开了。因此以扫轻看了他的长子权。
+\N 然后雅各将一些饼和兵豆汤给以扫，他吃了喝了，然后就起身走开了。因此以扫鄙视他的长子权。
 
+% Genesis 26
+\section{第二十六章}
 
+% God’s Promise to Isaac
+\subsection*{上帝对以撒的应许}
+
+% Now there was another famine in the land, subsequent to the one that had occurred in Abraham’s time. And Isaac went to Abimelech king of the Philistines at Gerar.
+\N 现在在这土地上有另一场饥荒，接着亚伯拉罕时期发生的那场。而以撒去到了在基拉耳的非利士王亚比米勒那里。
+
+% The LORD appeared to Isaac and said, “Do not go down to Egypt. Settle in the land where I tell you.
+\N 耶和华向以撒显现并说，“不要下到埃及。要在我告诉你的土地上安家。
+% Stay in this land as a foreigner, and I will be with you and bless you. For I will give all these lands to you and your offspring, and I will confirm the oath that I swore to your father Abraham.
+\N 作为一个异邦人呆在这土地上，而我会与你同在并祝福你。因为我会将所有这些土地赐给你和你的后嗣，而我会确认我给你父亲亚伯拉罕发了的誓言。
+% I will make your descendants as numerous as the stars in the sky, and I will give them all these lands, and through your offspring all nations of the earth will be blessed,
+\N 我会使你的后代如天空中的星辰一样众多，而我会将所有这些土地赐给他们，并藉着你的后嗣，地上万民都会蒙福，
+% because Abraham listened to My voice and kept My charge, My commandments, My statutes, and My laws.”
+\N 因为亚伯拉罕听从了我的话并信守我的托付，我的诫命，我的法规，和我的律法。”
+
+% Isaac Deceives Abimelech
+\subsection*{以撒欺骗亚比米勒}
+
+% So Isaac settled in Gerar.
+\N 所以以撒在基拉耳安家。
+% But when the men of that place asked about his wife, he said, “She is my sister.” For he was afraid to say, “She is my wife,” since he thought to himself, “The men of this place will kill me on account of Rebekah, because she is so beautiful.”
+\N 但当那地方的人们问询他的妻子时，他说，“她是我的妹妹。”因为他害怕说，“她是我的妻子，”因为他自以为，“这地方的人们会为了利百加而杀我，因为她是如此漂亮。”
+
+% When Isaac had been there a long time, Abimelech king of the Philistines looked down from the window and was surprised to see Isaac caressing his wife Rebekah.
+\N 当以撒已在那里很长时间时，非利士王亚比米勒从窗户俯瞰并惊讶地看见以撒在爱抚他的妻子利百加。
+% Abimelech sent for Isaac and said, “So she is really your wife! How could you say, ‘She is my sister’?”
+\N 亚比米勒派人请以撒并说，“所以她真的是你的妻子！你怎么能说，‘她是我的妹妹’？”
+
+% Isaac replied, “Because I thought I might die on account of her.”
+以撒回复，“因为我以为我可能会为了她而死。”
+
+% “What is this you have done to us?” asked Abimelech. “One of the people could easily have slept with your wife, and you would have brought guilt upon us.”
+\N “你对我们已做的这是什么？”亚比米勒问。“族民中的人可能容易与你的妻子同寝，而你就会将罪行带给我们。”
+% So Abimelech warned all the people, saying, “Whoever harms this man or his wife will surely be put to death.”
+\N 所以亚比米勒警告所有族民，说，“任何伤害这人或他妻子的都必定会被处死。”
 
 
 
