--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2364,6 +2364,47 @@
 % So Abimelech warned all the people, saying, “Whoever harms this man or his wife will surely be put to death.”
 \N 所以亚比米勒警告所有族民，说，“任何伤害这人或他妻子的都必定会被处死。”
 
+% Isaac’s Prosperity
+\subsection*{以撒的繁荣}
+
+% Now Isaac sowed seed in the land, and that very year he reaped a hundredfold. And the LORD blessed him,
+\N 现在以撒在土地上播种种子，而就在那年他收割了一百倍。而耶和华祝福他，
+% and he became richer and richer, until he was exceedingly wealthy.
+\N 而他变得越来越富有，直到他极其富足。
+% He owned so many flocks and herds and servants that the Philistines envied him.
+\N 他拥有如此多的羊群、牛群以及仆人，以致于非利士人忌妒他。
+% So the Philistines took dirt and stopped up all the wells that his father’s servants had dug in the days of his father Abraham.
+\N 所以非利士人取土并堵住了所有的水井，而这些水井是他父亲的仆人在他父亲亚伯拉罕的日子里挖的。
+
+% Then Abimelech said to Isaac, “Depart from us, for you are much too powerful for us.”
+\N 然后亚比米勒对以撒说，“从我们离去，因为你对我们太过强盛了。”
+
+% So Isaac left that place and encamped in the Valley of Gerar and settled there. 
+\N 所以以撒离开那地方并在基拉耳谷扎营并在那里安了家。
+% Isaac reopened the wells that had been dug in the days of his father Abraham, which the Philistines had stopped up after Abraham died. And he gave these wells the same names his father had given them.
+\N 以撒重新打开那些在他父亲亚伯拉罕的日子挖的水井，非利士人在亚伯拉罕死后就将它们堵上了。而他给这些水井用他父亲已取的相同名字命名。
+
+% Then Isaac’s servants dug in the valley and found a well of fresh water there.
+\N 然后以撒的仆人在山谷中挖掘并在那里发现了一口活水井。
+% But the herdsmen of Gerar quarreled with Isaac’s herdsmen and said, “The water is ours!” So he named the well Esek, because they contended with him.
+\N 但基拉耳的牧民与以撒的牧民争吵并说，“这水是我们的！”所以他给那水井取名埃色，因为他们与他争竞。
+
+% Then they dug another well and quarreled over that one also; so he named it Sitnah.
+\N 然后他们挖了另一口水井并又为那口井争吵；所以他给它取名西提拿。
+
+% He moved on from there and dug another well, and they did not quarrel over it. He named it Rehoboth and said, “At last the LORD has made room for us, and we will be fruitful in the land.”
+\N 他从那里继续前行并挖了另一口井，而他们没有为它争吵。他给它取名利河伯并说，“最后耶和华已为我们开辟空间，而我们会在这土地上富有果实。”
+
+% From there Isaac went up to Beersheba,
+\N 以撒从那里向上走到别是巴，
+% and that night the LORD appeared to him and said, “I am the God of your father Abraham. Do not be afraid, for I am with you. I will bless you and multiply your descendants for the sake of My servant Abraham.”
+\N 而那晚耶和华向他显现并说，“我是你父亲亚伯拉罕的上帝。不要害怕，因为我与你同在。我会祝福你并因我仆人亚伯拉罕的缘故使你的后代倍增。”
+
+% So Isaac built an altar there and called on the name of the LORD, and he pitched his tent there. His servants also dug a well there.
+\N 所以以撒在那里建造了一座祭坛并求靠耶和华的名，而他在那里搭起他的帐篷。他的仆人也在那里挖了一口水井。
+
+
+
 
 
 \thispagestyle{empty}
