--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2154,7 +2154,7 @@
 % Then he brought out jewels of silver and gold, and articles of clothing, and he gave them to Rebekah. He also gave precious gifts to her brother and her mother.
 \N 然后他拿出金银的珠宝，和衣物，而他将他们给了利百加。他还将珍贵的礼物给了她的哥哥和她的母亲。
 % Then he and the men with him ate and drank and spent the night there.
-\N 然后他和与他随行的人吃喝，并在那里过夜。
+\N 然后他和与他随行的人又吃又喝，并在那里过夜。
 
 % When they got up the next morning, he said, “Send me on my way to my master.”
 当他们第二天起身，他说，“送我上路回我主人那。”
@@ -2323,7 +2323,7 @@
 % So Esau swore to Jacob and sold him the birthright.
 所以以扫向雅各发誓并将长子权卖给了他。
 % Then Jacob gave some bread and lentil stew to Esau, who ate and drank and then got up and went away. Thus Esau despised his birthright.
-\N 然后雅各将一些饼和兵豆汤给以扫，他吃了喝了，然后就起身走开了。因此以扫鄙视他的长子权。
+\N 然后雅各将一些饼和兵豆汤给以扫，他又吃又喝，然后就起身走开了。因此以扫鄙视他的长子权。
 
 % Genesis 26
 \section{第二十六章}
@@ -2403,9 +2403,37 @@
 % So Isaac built an altar there and called on the name of the LORD, and he pitched his tent there. His servants also dug a well there.
 \N 所以以撒在那里建造了一座祭坛并求靠耶和华的名，而他在那里搭起他的帐篷。他的仆人也在那里挖了一口水井。
 
+% Isaac’s Covenant with Abimelech
+\subsection*{以撒与亚比米勒之约}
 
+% Later, Abimelech came to Isaac from Gerar, with Ahuzzath his adviser and Phicol the commander of his army.
+\N 后来，亚比米勒从基拉耳来到以撒这里，与他的顾问亚户撒和他的军队指挥官非各一同。
 
+% “Why have you come to me?” Isaac asked them. “You hated me and sent me away.”
+\N “你们为何来我这里？”以撒问他们。“你们恨我并将我送走。”
 
+% “We can plainly see that the LORD has been with you,” they replied. “We recommend that there should now be an oath between us and you. Let us make a covenant with you
+\N “我们能明明白白地看见耶和华已与你同在，”他们回复。“我们推荐现在我们之间应该有个誓言。让我们与你立一个协定
+% that you will not harm us, just as we have not harmed you but have done only good to you, sending you on your way in peace. And now you are blessed by the LORD.”
+以使你不会伤害我们，正如我们未曾伤害你而只对你行好事，和平地送你上路。而现在你被耶和华祝福。”
+
+% So Isaac prepared a feast for them, and they ate and drank.
+\N 所以以撒为他们预备了一顿盛宴，而他们又吃又喝。
+% And they got up early the next morning and swore an oath to each other. Then Isaac sent them on their way, and they left him in peace.
+\N 而他们第二天清早起身并相互发了一个誓言。然后以撒送他们上路，而他们和平地离开了他。
+
+% On that same day, Isaac’s servants came and told him about the well they had dug. “We have found water!” they told him.
+\N 在那同一天，以撒的仆人们来并告诉他他们已挖到的水井。“我们已找到了水！”他们告诉他。
+% So he called it Shibah, and to this day the name of the city is Beersheba.
+\N 所以他称它为示巴，而直到今日这城的名字是别是巴。
+
+% Esau’s Wives
+\subsection*{以扫的妻子}
+
+% When Esau was forty years old, he took as his wives Judith daughter of Beeri the Hittite and Basemath daughter of Elon the Hittite.
+\N 当以扫四十岁时，他娶了赫人比利的女儿犹滴和赫人以伦的女儿巴实抹为妻。
+% And they brought grief to Isaac and Rebekah.
+\N 而她们给以撒和利百加带来忧伤。
 
 \thispagestyle{empty}
 \newpage
