--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2435,6 +2435,45 @@
 % And they brought grief to Isaac and Rebekah.
 \N 而她们给以撒和利百加带来忧伤。
 
+% Genesis 27
+\section{第二十七章}
+
+% Isaac Blesses Jacob
+\subsection*{以撒祝福雅各}
+
+% When Isaac was old and his eyes were so weak that he could no longer see, he called his older son Esau and said to him, “My son.”
+\N 当以撒年老而他的眼睛是如此昏花以致他不再能看见，他将他的大儿子以扫叫来并对他说，“我的儿子。”
+
+% “Here I am,” Esau replied.
+“我在这里，”以扫回复。
+
+% “Look,” said Isaac, “I am now old, and I do not know the day of my death.
+\N “看，”以撒说，“我现在年老，而我不知道我死的日子。
+% Take your weapons—your quiver and bow—and go out into the field to hunt some game for me.
+\N 带上你的武器---你的箭囊和弓---并外出到田野中为我猎取一些野味。
+% Then prepare a tasty dish that I love and bring it to me to eat, so that I may bless you before I die.”
+\N 然后预备一道我爱吃的可口的菜肴并将它带给我吃，以使我能在我死之前祝福你。”
+
+% Now Rebekah was listening to what Isaac told his son Esau. So when Esau went into the field to hunt game and bring it back,
+\N 现在利百加正听到以撒告诉他儿子以扫的事情。所以当以扫走入田野去猎取野味并将它带回时，
+% Rebekah said to her son Jacob, “Behold, I overheard your father saying to your brother Esau,
+\N 利百加对她的儿子雅各说，“看啊，我无意中听见你父亲对你的哥哥以扫说，
+% ‘Bring me some game and prepare me a tasty dish to eat, so that I may bless you in the presence of the LORD before I die.’
+\N ‘带给我一些野味并未我预备一道可口的菜肴吃，以使在我死之前，我能在耶和华的临在中祝福你。’
+
+% Now, my son, listen to my voice and do exactly as I tell you.
+\N 现在，我的儿子，听从我的话并照我吩咐你的做。
+% Go out to the flock and bring me two choice young goats, so that I can make them into a tasty dish for your father—the kind he loves.
+\N 出去到羊群那里给我带两只上好的小山羊，以使我能将它们为你父亲做成一道可口的菜肴---他爱吃的那类。
+% Then take it to your father to eat, so that he may bless you before he dies.”
+\N 然后将它拿给你父亲吃，以使他能在他死之前祝福你。”
+
+% Jacob answered his mother Rebekah, “Look, my brother Esau is a hairy man, but I am smooth-skinned.
+\N 雅各回答他的母亲利百加，“看，我哥哥以扫浑身是毛，但我皮肤光滑。
+% What if my father touches me? Then I would be revealed to him as a deceiver, and I would bring upon myself a curse rather than a blessing.”
+\N 倘若我父亲摸我呢？那么我就会在他面前被揭露而成了一个欺骗者，而我会给自己带来咒诅而不是祝福。”
+
+
 \thispagestyle{empty}
 \newpage
 
