--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2452,7 +2452,7 @@
 % Take your weapons—your quiver and bow—and go out into the field to hunt some game for me.
 \N 带上你的武器---你的箭囊和弓---并外出到田野中为我猎取一些野味。
 % Then prepare a tasty dish that I love and bring it to me to eat, so that I may bless you before I die.”
-\N 然后预备一道我爱吃的可口的菜肴并将它带给我吃，以使我能在我死之前祝福你。”
+\N 然后预备一道我所爱的可口的菜肴并将它带给我吃，以使我能在我死之前祝福你。”
 
 % Now Rebekah was listening to what Isaac told his son Esau. So when Esau went into the field to hunt game and bring it back,
 \N 现在利百加正听到以撒告诉他儿子以扫的事情。所以当以扫走入田野去猎取野味并将它带回时，
@@ -2464,7 +2464,7 @@
 % Now, my son, listen to my voice and do exactly as I tell you.
 \N 现在，我的儿子，听从我的话并照我吩咐你的做。
 % Go out to the flock and bring me two choice young goats, so that I can make them into a tasty dish for your father—the kind he loves.
-\N 出去到羊群那里给我带两只上好的小山羊，以使我能将它们为你父亲做成一道可口的菜肴---他爱吃的那类。
+\N 出去到羊群那里给我带两只上好的小山羊，以使我能将它们为你父亲做成一道可口的菜肴---他所爱的那类。
 % Then take it to your father to eat, so that he may bless you before he dies.”
 \N 然后将它拿给你父亲吃，以使他能在他死之前祝福你。”
 
@@ -2472,6 +2472,42 @@
 \N 雅各回答他的母亲利百加，“看，我哥哥以扫浑身是毛，但我皮肤光滑。
 % What if my father touches me? Then I would be revealed to him as a deceiver, and I would bring upon myself a curse rather than a blessing.”
 \N 倘若我父亲摸我呢？那么我就会在他面前被揭露而成了一个欺骗者，而我会给自己带来咒诅而不是祝福。”
+
+% His mother replied, “Your curse be on me, my son. Just obey my voice and go get them for me.”
+\N 他的母亲回复，“我的儿子，愿你的咒诅落在我身上。只要遵守我的话并去为我把他们拿来。”
+
+% So Jacob went and got two goats and brought them to his mother, who made the tasty food his father loved. 
+\N 所以雅各去取了两只山羊并将它们带个他的母亲，而她做了他父亲所爱的可口食物。
+% And Rebekah took the finest clothes in the house that belonged to her older son Esau, and she put them on her younger son Jacob.
+\N 而利百加取了属于她大儿子以扫的房子中最好的衣服，而她将它们穿在她小儿子雅各身上。
+% She also put the skins of the young goats on his hands and on the smooth part of his neck. 
+\N 她还将小山羊的皮戴在他的手上以及他光滑的脖子部分上。
+% Then she handed her son Jacob the tasty food and bread she had made.
+\N 然后她将她已做的可口食物和饼交给她的儿子雅各。
+
+% So Jacob went to his father and said, “My father.”
+\N 所以雅各去到他父亲那里并说，“我的父亲。”
+
+% “Here I am!” he answered. “Which one are you, my son?”
+“我在这里！”他回答。“我的儿子，你是哪一个？”
+
+% Jacob said to his father, “I am Esau, your firstborn. I have done as you told me. Please sit up and eat some of my game, so that you may bless me.”
+\N 雅各对他父亲说，“我是以扫，你的长子。我已按你吩咐我的做了。请坐起并吃一些我的野味，以使你能祝福我。”
+
+% But Isaac asked his son, “How did you ever find it so quickly, my son?”
+\N 但以撒问他的儿子，“我的儿子，你如何如此快速地打到它呢？”
+
+% “Because the LORD your God brought it to me,” he replied.
+“因为是耶和华你的上帝将它带给了我，”他回复。
+
+% Then Isaac said to Jacob, “Please come closer so I can touch you, my son. Are you really my son Esau, or not?”
+\N 然后以撒对雅各说，“请靠近一些，使我能摸你，我的儿子。你真的是我的儿子以撒，还是不是？”
+
+% So Jacob came close to his father Isaac, who touched him and said, “The voice is the voice of Jacob, but the hands are the hands of Esau.”
+\N 所以雅各靠近他的父亲以撒，而以撒摸了他并说，“声音是雅各的声音，手却是以扫的手。”
+% Isaac did not recognize him, because his hands were hairy like those of his brother Esau; so he blessed him.
+\N 以撒未认出他，因为他的手和他哥哥以扫的一样多毛；所以他祝福了他。
+
 
 
 \thispagestyle{empty}
