--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2506,7 +2506,51 @@
 % So Jacob came close to his father Isaac, who touched him and said, “The voice is the voice of Jacob, but the hands are the hands of Esau.”
 \N 所以雅各靠近他的父亲以撒，而以撒摸了他并说，“声音是雅各的声音，手却是以扫的手。”
 % Isaac did not recognize him, because his hands were hairy like those of his brother Esau; so he blessed him.
-\N 以撒未认出他，因为他的手和他哥哥以扫的一样多毛；所以他祝福了他。
+\N 以撒未认出他，因为他的手和他哥哥以扫的一样多毛；所以以撒祝福了他。
+
+% Again he asked, “Are you really my son Esau?”
+\N 他再次问，“你真的是我的儿子以扫？”
+
+% And he replied, “I am.”
+而他回复，“我是。”
+
+% “Serve me,” said Isaac, “and let me eat some of my son’s game, so that I may bless you.”
+\N “伺候我，”以撒说，“让我吃一些我儿子的野味，以使我能祝福你。”
+
+% Jacob brought it to him, and he ate; then he brought him wine, and he drank.
+雅各将其递给他，他就吃了；然后他将酒递给他，他就喝了。
+
+% Then his father Isaac said to him, “Please come near and kiss me, my son.”
+\N 然后他父亲以撒对他说，“我的儿子，请靠近并亲吻我。”
+
+% So he came near and kissed him. When Isaac smelled his clothing, he blessed him and said:
+\N 所以他靠近并亲吻他。当以撒闻了他的衣物，他祝福他并说：
+
+% “Ah, the smell of my son is like the smell of a field that the LORD has blessed.
+“啊，我儿子的味道像一片耶和华已祝福的田野的味道一样。
+
+% May God give to you the dew of heaven and the richness of the earth — an abundance of grain and new wine.
+\N 愿上帝赐给你天国的露水和大地的丰富---盛于谷物和新酒。
+
+% May peoples serve you and nations bow down to you. May you be the master of your brothers, and may the sons of your mother bow down to you. May those who curse you be cursed, and those who bless you be blessed.”
+\N 愿众民服侍你而众邦向你下拜。愿你成为你兄弟们的主人，并愿你母亲的子嗣向你下拜。愿那些咒诅你的人被咒诅，而那些祝福你的人蒙福。”
+
+% Esau’s Lost Hope
+\subsection*{以扫失去希望}
+% As soon as Isaac had finished blessing him and Jacob had left his father’s presence, his brother Esau returned from the hunt.
+\N 以撒一结束祝福他而雅各刚离开他父亲的面前，他的哥哥以扫就从狩猎归来。
+% He too made some tasty food, brought it to his father, and said to him, “My father, sit up and eat of your son’s game, so that you may bless me.”
+\N 他也做了一些可口的食物，将它带给他的父亲，并对他说，“我的父亲，坐起并吃点你儿子的野味，以使你能祝福我。”
+
+% But his father Isaac replied, “Who are you?”
+\N 但他的父亲以撒回复，“你是谁？”
+
+% “I am Esau, your firstborn son,” he answered.
+“我是以扫，你的头生的儿子，”他回答。
+
+% Isaac began to tremble violently and said, “Who was it, then, who hunted the game and brought it to me? Before you came in, I ate it all and blessed him—and indeed, he will be blessed!”
+\N 以撒开始剧烈地战兢并说，“那刚才猎取野味并带给我的是谁？在你进来之前，我将它全都吃了并祝福了他---而的确，他会被祝福！”
+
 
 
 
