--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2551,6 +2551,27 @@
 % Isaac began to tremble violently and said, “Who was it, then, who hunted the game and brought it to me? Before you came in, I ate it all and blessed him—and indeed, he will be blessed!”
 \N 以撒开始剧烈地战兢并说，“那刚才猎取野味并带给我的是谁？在你进来之前，我将它全都吃了并祝福了他---而的确，他会被祝福！”
 
+% When Esau heard his father’s words, he let out a loud and bitter cry and said to his father, “Bless me too, O my father!”
+\N 当以扫听见他父亲的言词，他发出了一声高亢而苦涩的哭嚎并对他父亲说，“我的父亲啊，也祝福我吧！”
+
+% But Isaac replied, “Your brother came deceitfully and took your blessing.”
+\N 但以撒回复，“你的弟弟诡诈地来并取了你的祝福。”
+
+% So Esau declared, “Is he not rightly named Jacob? For he has cheated me twice. He took my birthright, and now he has taken my blessing.” Then he asked, “Haven’t you saved a blessing for me?”
+\N 所以以扫宣告，“他不正是名叫雅各吗？因为他已蒙骗我两次。他取了我的长子权，而现在他已取了我的祝福。”然后他说，“你难道未为我留存一份祝福吗？”
+
+% But Isaac answered Esau: “Look, I have made him your master and given him all his relatives as servants; I have sustained him with grain and new wine. What is left that I can do for you, my son?”
+\N 但以撒问以扫：“看，我已使他做你的主人并将他所有的亲戚给他做仆人；我已以谷物和新酒给养他。我的儿子，我能为你做的还剩什么呢？”
+
+% Esau said to his father, “Do you have only one blessing, my father? Bless me too, O my father!” Then Esau wept aloud.
+\N 以扫对他的父亲说，“我的父亲，你只有一个祝福吗？我的父亲啊，也祝福我吧！”然后以扫放声哭泣。
+
+% His father Isaac answered him: “Behold, your dwelling place shall be away from the richness of the land,away from the dew of heaven above.
+\N 他的父亲以撒回答他：“看啊，你栖居地必远离土地的丰富，远离天国之上的露水。
+
+% You shall live by the sword and serve your brother. But when you rebel, you will tear his yoke from your neck.”
+\N 你必靠刀剑为生而服侍你的弟弟。但当你反叛时，你会从你的脖子撕开他的轭。”
+
 
 
 
