--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2572,6 +2572,21 @@
 % You shall live by the sword and serve your brother. But when you rebel, you will tear his yoke from your neck.”
 \N 你必靠刀剑为生而服侍你的弟弟。但当你反叛时，你会从你的脖子撕开他的轭。”
 
+% Esau held a grudge against Jacob because of the blessing his father had given him. And Esau said in his heart, “The days of mourning for my father are at hand; then I will kill my brother Jacob.”
+\N 以扫对雅各怀恨在心因为他父亲已给他的祝福。而以扫在他心里说，“为我父亲哀悼的日子近在眼前；那时我会杀掉我的弟弟雅各。”
+
+% When the words of her older son Esau were relayed to Rebekah, she sent for her younger son Jacob and told him, “Look, your brother Esau is consoling himself by plotting to kill you.
+\N 当她大儿子以扫的言词传到了利百加时，她派人请她的小儿子雅各并告诉他，“看，你哥哥以扫以谋划杀你来慰藉自己。
+% So now, my son, obey my voice and flee at once to my brother Laban in Haran.
+\N 所以现在，我的儿子，遵守我的话而立即逃到我在哈兰的哥哥拉班那里。
+% Stay with him for a while, until your brother’s fury subsides—
+\N 与他呆一阵，直到你哥哥的怒气消退---
+% until your brother’s rage against you wanes and he forgets what you have done to him. Then I will send for you and bring you back from there. Why should I lose both of you in one day?”
+\N 直到你哥哥对你的怒气减弱并忘记你对他已做的事。然后我会派人请你并将你从那里带回。为何我要在一日之内失去你们两个？”
+
+% Then Rebekah said to Isaac, “I am weary of my life because of these Hittite women. If Jacob takes a Hittite wife from among them, what good is my life?”
+\N 然后利百加对以撒说，“我因这些赫人的女人身心疲惫。如果雅各从他们之中娶一个赫人妻子，我的生命有何善处呢？”
+
 
 
 
