--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2537,6 +2537,7 @@
 
 % Esau’s Lost Hope
 \subsection*{以扫失去希望}
+
 % As soon as Isaac had finished blessing him and Jacob had left his father’s presence, his brother Esau returned from the hunt.
 \N 以撒一结束祝福他而雅各刚离开他父亲的面前，他的哥哥以扫就从狩猎归来。
 % He too made some tasty food, brought it to his father, and said to him, “My father, sit up and eat of your son’s game, so that you may bless me.”
@@ -2587,7 +2588,23 @@
 % Then Rebekah said to Isaac, “I am weary of my life because of these Hittite women. If Jacob takes a Hittite wife from among them, what good is my life?”
 \N 然后利百加对以撒说，“我因这些赫人的女人身心疲惫。如果雅各从他们之中娶一个赫人妻子，我的生命有何善处呢？”
 
+% Genesis 28
+\section{第二十八章}
 
+% Jacob’s Departure
+\subsection*{雅各离去}
+
+% So Isaac called for Jacob and blessed him. “Do not take a wife from the Canaanite women,” he commanded.
+\N 所以以撒将雅各唤来并祝福他。“不要从迦南女人中娶一位妻子，”他命令。
+%“Go at once to Paddan-aram, to the house of your mother’s father Bethuel, and take a wife from among the daughters of Laban, your mother’s brother.
+\N “立即去巴旦亚兰，到你母亲的父亲彼土利的家族，并从你母亲的哥哥，拉班的女儿之中娶一位妻子。
+% May God Almighty bless you and make you fruitful and multiply you, so that you may become a company of peoples.
+\N 愿上帝全能者祝福你而使你富有果实且使你倍增，以使你能成为一个族群。
+% And may He give the blessing of Abraham to you and your descendants, so that you may possess the land where you dwell as a foreigner, the land God gave to Abraham.”
+\N 并愿祂将亚伯拉罕的祝福赐给你和你的后代，以使你能占有你作为一个异邦人所栖居的土地，上帝赐给亚伯拉罕的土地。”
+
+% So Isaac sent Jacob to Paddan-aram, to Laban son of Bethuel the Aramean, the brother of Rebekah, who was the mother of Jacob and Esau.
+\N 所以以撒送雅各到巴旦亚兰，到亚兰人彼土利的儿子拉班那里，而拉班是雅各和以扫的母亲利百加的哥哥。
 
 
 \thispagestyle{empty}
