--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -548,7 +548,7 @@
 % Now when men began to multiply on the face of the earth and daughters were born to them,
 \N 现在当人类开始在地表倍增，而女儿们为他们出生时，
 % the sons of God saw that the daughters of men were beautiful, and they took as wives whomever they chose.
-\N 上帝的儿子们看见人类的女儿漂亮，他们就娶任何他们选取的为妻子。
+\N 上帝的儿子们看见人类的女儿漂亮，他们就取任何他们选取的为妻子。
 
 % So the LORD said, “My Spirit will not contend with man forever, for he is mortal; his days shall be 120 years.”
 \N 所以耶和华说，“我的圣灵不会永远同人争竞，因为他是凡人；他的日子必定只有120年。”
@@ -1056,7 +1056,7 @@
 \N 哈兰在他父亲他拉生前死在他的故土，在迦勒底的吾珥。
 
 % And Abram and Nahor took wives for themselves. Abram’s wife was named Sarai, and Nahor’s wife was named Milcah; she was the daughter of Haran, who was the father of both Milcah and Iscah.
-\N 而亚伯兰和拿鹤各自娶了妻子。亚伯兰的妻子名叫撒莱，而拿鹤的妻子名叫密迦；她是哈兰的女儿，而哈兰同是密迦和亦迦的父亲。
+\N 而亚伯兰和拿鹤各自取了妻子。亚伯兰的妻子名叫撒莱，而拿鹤的妻子名叫密迦；她是哈兰的女儿，而哈兰同是密迦和亦迦的父亲。
 % But Sarai was barren; she had no children.
 \N 但撒莱不育；她没有子女。
 
@@ -1127,7 +1127,7 @@
 % So Pharaoh summoned Abram and asked, “What have you done to me? Why didn’t you tell me she was your wife?
 \N 所以法老召见亚伯兰并问，“你对我做了什么？为什么你不告诉我她是你的妻子？
 % Why did you say, ‘She is my sister,’ so that I took her as my wife? Now then, here is your wife. Take her and go!”
-\N 为什么你说，‘她是我的妹妹，’以使我娶她作我的妻子？那么现在，这是你的妻子。带她走！”
+\N 为什么你说，‘她是我的妹妹，’以使我取她作我的妻子？那么现在，这是你的妻子。带她走！”
 
 % Then Pharaoh gave his men orders concerning Abram, and they sent him away with his wife and all his possessions.
 \N 然后法老给他的人们关涉亚伯兰的告令，他们就将他与他的妻子和他所有的财产一起送走。
@@ -2002,16 +2002,16 @@
 \section{第二十四章}
 
 % A Wife for Isaac
-\subsection*{以撒娶妻}
+\subsection*{以撒取妻}
 
 % By now Abraham was old and well along in years, and the LORD had blessed him in every way.
 \N 到现在亚伯拉罕年老且年事已高，而耶和华已在每个方面都祝福他。
 % So Abraham instructed the chief servant of his household, who managed all he owned, “Place your hand under my thigh,
 \N 所以亚伯拉罕指示他家室管理他拥有的所有的首仆，“将你的手放在我的大腿下，
 % and I will have you swear by the LORD, the God of heaven and the God of earth, that you will not take a wife for my son from the daughters of the Canaanites among whom I am dwelling,
-\N 而我会使你靠耶和华、天之上帝和地之上帝发誓，你不会从我栖居的迦南人的女儿中间为我的儿子娶一位妻子，
+\N 而我会使你靠耶和华、天之上帝和地之上帝发誓，你不会从我栖居的迦南人的女儿中间为我的儿子取一位妻子，
 % but will go to my country and my kindred to take a wife for my son Isaac.”
-\N 而会去我的故乡和我的亲属那为我的儿子以撒娶一位妻子。”
+\N 而会去我的故乡和我的亲属那为我的儿子以撒取一位妻子。”
 
 % The servant asked him, “What if the woman is unwilling to follow me to this land? Shall I then take your son back to the land from which you came?”
 \N 那仆人问他：“倘若那女人不愿意跟随我到这土地呢？那么我应该将你的儿子带回到你出身之地吗？”
@@ -2019,7 +2019,7 @@
 % Abraham replied, “Make sure that you do not take my son back there. 
 \N 亚伯拉罕回复，“做出保证你不将我的儿子带回那里。
 % The LORD, the God of heaven, who brought me from my father’s house and my native land, who spoke to me and promised me on oath, saying, ‘To your offspring I will give this land’—He will send His angel before you so that you can take a wife for my son from there.
-\N 耶和华，天之上帝，祂将我从我父亲的家族和我的故土带出，祂对我讲话并以誓言应许我，说，‘我会将这土地赐给你的后嗣’---祂会在你前面派祂的使者以使你能从那里为我的儿子娶一个妻子。
+\N 耶和华，天之上帝，祂将我从我父亲的家族和我的故土带出，祂对我讲话并以誓言应许我，说，‘我会将这土地赐给你的后嗣’---祂会在你前面派祂的使者以使你能从那里为我的儿子取一位妻子。
 % And if the woman is unwilling to follow you, then you are released from this oath of mine. Only do not take my son back there.”
 \N 而如果那女人不愿意跟随你，那么你就被免除我这个誓言。只是不要将你儿子带回那里。”
 
@@ -2108,15 +2108,15 @@
 \N 我主人的妻子撒拉已在她老龄时为他生了一个儿子，而我的主人已将他拥有的一切都给了他。
 
 % My master made me swear an oath and said, ‘You shall not take a wife for my son from the daughters of the Canaanites in whose land I dwell,
-\N 我的主人让我发了誓言并说，‘你不要从我栖居之地迦南人的女儿为我的儿子娶一个妻子，
+\N 我的主人让我发了誓言并说，‘你不要从我栖居之地迦南人的女儿为我的儿子取一位妻子，
 % but you shall go to my father’s house and to my kindred to take a wife for my son.’
-\N 但你要去到我父亲的家族和到我亲属那为我的儿子娶一个妻子。’
+\N 但你要去到我父亲的家族和到我亲属那为我的儿子取一位妻子。’
 
 % Then I asked my master, ‘What if the woman will not come back with me?’
 \N 然后我问我的主人，‘倘若那女人不会与我回来呢？’
 
 % And he told me, ‘The LORD, before whom I have walked, will send His angel with you and make your journey a success, so that you may take a wife for my son from my kindred and from my father’s house. 
-\N 而他告诉我，‘耶和华，我已行在祂面前，祂会派祂的使者与你同在并使你此行成功，以使你能从我的亲属和我父亲的家族为我的儿子娶一个妻子。
+\N 而他告诉我，‘耶和华，我已行在祂面前，祂会派祂的使者与你同在并使你此行成功，以使你能从我的亲属和我父亲的家族为我的儿子取一位妻子。
 % And when you go to my kindred, if they refuse to give her to you, then you will be released from my oath.’
 \N 而当你去到我亲属那，如果他们拒绝将她给你，那么你会被免除我这个誓言。’
 
@@ -2139,7 +2139,7 @@
 % She replied, ‘The daughter of Bethuel son of Nahor, whom Milcah bore to him.’ So I put the ring on her nose and the bracelets on her wrists.
 她回复，‘拿鹤的儿子、密迦为他生的彼土利的女儿。’所以我将环放在她鼻子上并将镯子放在她手腕上。
 % Then I bowed down and worshiped the LORD; and I blessed the LORD, the God of my master Abraham, who led me on the right road to take the granddaughter of my master’s brother for his son.
-\N 然后我下拜并敬拜耶和华；而我崇拜耶和华、我主人亚伯拉罕的上帝，祂带领我在为他的儿子娶我主人兄弟的孙女的正路上。
+\N 然后我下拜并敬拜耶和华；而我崇拜耶和华、我主人亚伯拉罕的上帝，祂带领我在为他的儿子取我主人兄弟的孙女的正路上。
 
 % Now if you will show kindness and faithfulness to my master, tell me; but if not, let me know, so that I may go elsewhere.”
 \N 现在如果你们愿向我主人展示良善和信实，请告诉我；但如果不，请让我知道，以使我能去其他地方。”
@@ -2205,7 +2205,7 @@
 \N 然后仆人告诉了以撒他已完成的所有。
 
 % And Isaac brought her into the tent of his mother Sarah and took Rebekah as his wife. And Isaac loved her and was comforted after his mother’s death.
-\N 而以撒将她带进他母亲撒拉的帐篷并娶利百加为他的妻子。而以撒爱她并在他母亲死后得了安慰。
+\N 而以撒将她带进他母亲撒拉的帐篷并取利百加为他的妻子。而以撒爱她并在他母亲死后得了安慰。
 
 % Genesis 25
 \section{第二十五章}
@@ -2214,7 +2214,7 @@
 \subsection*{亚伯拉罕与基土拉}
 
 % Now Abraham had taken another wife, named Keturah,
-\N 现在亚伯拉罕已娶另一个妻子，名叫基土拉，
+\N 现在亚伯拉罕已取另一个妻子，名叫基土拉，
 % and she bore him Zimran, Jokshan, Medan, Midian, Ishbak, and Shuah.
 \N 而她为他生了心兰、约珊、米但、米甸、伊施巴和书亚。
 
@@ -2431,7 +2431,7 @@
 \subsection*{以扫的妻子}
 
 % When Esau was forty years old, he took as his wives Judith daughter of Beeri the Hittite and Basemath daughter of Elon the Hittite.
-\N 当以扫四十岁时，他娶了赫人比利的女儿犹滴和赫人以伦的女儿巴实抹为妻。
+\N 当以扫四十岁时，他取了赫人比利的女儿犹滴和赫人以伦的女儿巴实抹为妻。
 % And they brought grief to Isaac and Rebekah.
 \N 而她们给以撒和利百加带来忧伤。
 
@@ -2586,7 +2586,7 @@
 \N 直到你哥哥对你的怒气减弱并忘记你对他已做的事。然后我会派人请你并将你从那里带回。为何我要在一日之内失去你们两个？”
 
 % Then Rebekah said to Isaac, “I am weary of my life because of these Hittite women. If Jacob takes a Hittite wife from among them, what good is my life?”
-\N 然后利百加对以撒说，“我因这些赫人的女人身心疲惫。如果雅各从他们之中娶一个赫人妻子，我的生命有何善处呢？”
+\N 然后利百加对以撒说，“我因这些赫人的女人身心疲惫。如果雅各从他们之中取一个赫人妻子，我的生命有何善处呢？”
 
 % Genesis 28
 \section{第二十八章}
@@ -2595,9 +2595,9 @@
 \subsection*{雅各离去}
 
 % So Isaac called for Jacob and blessed him. “Do not take a wife from the Canaanite women,” he commanded.
-\N 所以以撒将雅各唤来并祝福他。“不要从迦南女人中娶一位妻子，”他命令。
+\N 所以以撒将雅各唤来并祝福他。“不要从迦南女人中取一位妻子，”他命令。
 %“Go at once to Paddan-aram, to the house of your mother’s father Bethuel, and take a wife from among the daughters of Laban, your mother’s brother.
-\N “立即去巴旦亚兰，到你母亲的父亲彼土利的家族，并从你母亲的哥哥，拉班的女儿之中娶一位妻子。
+\N “立即去巴旦亚兰，到你母亲的父亲彼土利的家族，并从你母亲的哥哥，拉班的女儿之中取一位妻子。
 % May God Almighty bless you and make you fruitful and multiply you, so that you may become a company of peoples.
 \N 愿上帝全能者祝福你而使你富有果实且使你倍增，以使你能成为一个族群。
 % And may He give the blessing of Abraham to you and your descendants, so that you may possess the land where you dwell as a foreigner, the land God gave to Abraham.”
@@ -2605,6 +2605,41 @@
 
 % So Isaac sent Jacob to Paddan-aram, to Laban son of Bethuel the Aramean, the brother of Rebekah, who was the mother of Jacob and Esau.
 \N 所以以撒送雅各到巴旦亚兰，到亚兰人彼土利的儿子拉班那里，而拉班是雅各和以扫的母亲利百加的哥哥。
+
+% Esau Marries Mahalath
+\subsection*{以扫娶玛哈拉}
+
+% Now Esau learned that Isaac had blessed Jacob and sent him to Paddan-aram to take a wife there, commanding him, “Do not marry a Canaanite woman,”
+\N 现在以扫得知以撒已祝福雅各并送他到巴旦亚兰那里去取一位妻子，命令他，“不要娶一位迦南女人，”
+% and that Jacob had obeyed his father and mother and gone to Paddan-aram.
+\N 并得知雅各已顺服他的父亲和母亲并去往巴旦亚兰。
+
+% And seeing that his father Isaac disapproved of the Canaanite women, 
+\N 而看见他父亲以撒不待见迦南女人，
+% Esau went to Ishmael and married Mahalath, the sister of Nebaioth and daughter of Abraham’s son Ishmael, in addition to the wives he already had.
+\N 以扫在他已经有的妻子之外，又去到以实玛利那里并娶了尼拜约的妹妹、亚伯拉罕儿子以实玛利的女儿玛哈拉。
+
+% Jacob’s Ladder
+\subsection*{雅各之梯}
+
+% Meanwhile Jacob left Beersheba and set out for Haran.
+\N 同时雅各离开别是巴并向哈兰出发。
+% On reaching a certain place, he spent the night there because the sun had set. And taking one of the stones from that place, he put it under his head and lay down to sleep.
+\N 在抵达某个地方时，他在那里过夜因为太阳已落山。他从那地方取了一块石头，并将它枕在他的头下并躺下睡觉。
+
+% And Jacob had a dream about a ladder that rested on the earth with its top reaching up to heaven, and God’s angels were going up and down the ladder. 
+\N 而雅各做了一个梦，梦见一架梯子立在地上，其顶端直达天国，而上帝的使者们正上上下下走在梯子上。
+% And there at the top the LORD was standing and saying, “I am the LORD, the God of your father Abraham and the God of Isaac. I will give you and your descendants the land on which you now lie.
+\N 而在顶端（或在他旁边）耶和华正站在那里并说，“我是耶和华，你祖父亚伯拉罕的上帝和以撒的上帝。我会将你现在躺卧的土地赐给你和你后代。
+% Your descendants will be like the dust of the earth, and you will spread out to the west and east and north and south. All the families of the earth will be blessed through you and your offspring.
+\N 你的后代会像地上的尘土，而你会扩散到西边、东边、南边和北边。地上所有家庭都会藉着你和你的后嗣蒙福。
+% Look, I am with you, and I will watch over you wherever you go, and I will bring you back to this land. For I will not leave you until I have done what I have promised you.”
+\N 看，我与你同在，而无论你去哪我都会看守你，而我会将你带回这土地。因为我不会离开你直到我已完成我已应许你的。”
+
+% When Jacob woke up, he said, “Surely the LORD is in this place, and I was unaware of it.”
+\N 当雅各醒来，他说，“无疑耶和华在这地方，而我未意识到它。”
+% And he was afraid and said, “How awesome is this place! This is none other than the house of God; this is the gate of heaven!”
+\N 而他害怕并说，“这地方真可畏！这不是别的而是上帝的殿堂；这是天国之门！”
 
 
 \thispagestyle{empty}
