--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2630,7 +2630,7 @@
 % And Jacob had a dream about a ladder that rested on the earth with its top reaching up to heaven, and God’s angels were going up and down the ladder. 
 \N 而雅各做了一个梦，梦见一架梯子立在地上，其顶端直达天国，而上帝的使者们正上上下下走在梯子上。
 % And there at the top the LORD was standing and saying, “I am the LORD, the God of your father Abraham and the God of Isaac. I will give you and your descendants the land on which you now lie.
-\N 而在顶端（或在他旁边）耶和华正站在那里并说，“我是耶和华，你祖父亚伯拉罕的上帝和以撒的上帝。我会将你现在躺卧的土地赐给你和你后代。
+\N 而在那里耶和华正站在顶端并说，“我是耶和华，你祖父亚伯拉罕的上帝和以撒的上帝。我会将你现在躺卧的土地赐给你和你后代。
 % Your descendants will be like the dust of the earth, and you will spread out to the west and east and north and south. All the families of the earth will be blessed through you and your offspring.
 \N 你的后代会像地上的尘土，而你会扩散到西边、东边、南边和北边。地上所有家庭都会藉着你和你的后嗣蒙福。
 % Look, I am with you, and I will watch over you wherever you go, and I will bring you back to this land. For I will not leave you until I have done what I have promised you.”
