--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2641,6 +2641,21 @@
 % And he was afraid and said, “How awesome is this place! This is none other than the house of God; this is the gate of heaven!”
 \N 而他害怕并说，“这地方真可畏！这不是别的而是上帝的殿堂；这是天国之门！”
 
+% The Stone of Bethel
+\subsection*{伯特利之石}
+
+% Early the next morning, Jacob took the stone that he had placed under his head, and he set it up as a pillar. He poured oil on top of it,
+\N 第二天清早，雅各取了他放置在他头下的石头，而他将它作为一个石柱立起。他在它的顶上浇了油，
+% and he called that place Bethel, though previously the city had been named Luz.
+\N 而他称那地方为伯特利，尽管这城市先前已被取名路斯。
+
+% Then Jacob made a vow, saying, “If God will be with me and watch over me on this journey, and if He will provide me with food to eat and clothes to wear, 
+\N 然后雅各立了一个誓约，说，“如果上帝会与我同在并在此旅行看守我，并且如果祂会供应我食物吃和衣服穿，
+% so that I may return safely to my father’s house, then the LORD will be my God.
+\N 以使我能安全返回我父亲的住所，那么耶和华会是我的上帝。
+% And this stone I have set up as a pillar will be God’s house, and of all that You give me I will surely give You a tenth.”
+\N 而我作为石柱已立起的这石头会是上帝的宫殿，而我无疑会从祢赐给我的所有中献给祢什一。”
+
 
 \thispagestyle{empty}
 \newpage
