--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2656,6 +2656,42 @@
 % And this stone I have set up as a pillar will be God’s house, and of all that You give me I will surely give You a tenth.”
 \N 而我作为石柱已立起的这石头会是上帝的宫殿，而我无疑会从祢赐给我的所有中献给祢什一。”
 
+% Genesis 29
+\section{第二十九章}
+
+% Jacob Meets Rachel
+\subsection*{雅各遇见拉结}
+
+% Jacob resumed his journey and came to the land of the people of the east.
+\N 雅各继续他的旅行而来到了东边族民的土地。
+% He looked and saw a well in the field, and near it lay three flocks of sheep, because the sheep were watered from this well. And a large stone covered the mouth of the well.
+\N 他观看并看见在田地里的一口水井，而它附近躺着三群羊，因为羊从这口水井饮水。而一块大石头盖着水井口。
+% When all the flocks had been gathered there, the shepherds would roll away the stone from the mouth of the well and water the sheep. Then they would return the stone to its place over the mouth of the well.
+\N 当所有羊群已被聚集在那里，牧羊人会把井口的石头挪开并饮羊。然后他们会将石头挪回它在井口的位置。
+
+% “My brothers,” Jacob asked the shepherds, “where are you from?”
+\N “我的兄弟，”雅各问牧羊人，“你们从哪里来？”
+
+% “We are from Haran,” they answered.
+“我们从哈兰来，”他们回答。
+
+% “Do you know Laban the grandson of Nahor?” Jacob asked.
+\N “你们认识拿鹤的孙子拉班吗？”雅各问。
+
+% “We know him,” they replied.
+“我们认识他，”他们回复。
+
+% “Is he well?” Jacob inquired.
+\N “他还好吗？”雅各询问。
+
+% “Yes,” they answered, “and here comes his daughter Rachel with his sheep.”
+“是的，”他们回答，“而他的女儿拉结带着他的羊正向这里走来。”
+
+% “Look,” said Jacob, “it is still broad daylight; it is not yet time to gather the livestock. Water the sheep and take them back to pasture.”
+\N “看，”雅各说，“天还大亮着；还不是聚集牲畜的时间。饮这些羊，然后把它们带回牧场。”
+
+% But they replied, “We cannot, until all the flocks have been gathered and the stone has been rolled away from the mouth of the well. Then we will water the sheep.”
+\N 但他们回复，“我们不能，直到所有的羊群已被聚集并且石头从井口被挪开。然后我们会饮这些羊。”
 
 \thispagestyle{empty}
 \newpage
