--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2693,6 +2693,42 @@
 % But they replied, “We cannot, until all the flocks have been gathered and the stone has been rolled away from the mouth of the well. Then we will water the sheep.”
 \N 但他们回复，“我们不能，直到所有的羊群已被聚集并且石头从井口被挪开。然后我们会饮这些羊。”
 
+% While he was still speaking with them, Rachel arrived with her father’s sheep, for she was a shepherdess.
+\N 在他仍在与他们讲话时，拉结与她父亲的羊一起抵达，因为她是一位牧羊女。
+% As soon as Jacob saw Rachel, the daughter of his mother’s brother Laban, with Laban’s sheep, he went up and rolled the stone away from the mouth of the well and watered his uncle’s sheep.
+\N 雅各一看见拉结，他母亲哥哥拉班的女儿，与拉班的羊一起，他就上前并将那石头从井口挪开并饮了他叔叔的羊。
+% Then Jacob kissed Rachel and wept aloud.
+\N 然后雅各亲吻拉结并放声哭泣。
+% He told Rachel that he was Rebekah’s son, a relative of her father, and she ran and told her father.
+\N 他告诉拉结他是利百加的儿子，她父亲的一个亲戚，而她跑去告诉了她父亲。
+
+% When Laban heard the news about his sister’s son Jacob, he ran out to meet him. He embraced him and kissed him and brought him to his home, where Jacob told him all that had happened.
+\N 当拉班听到关于他妹妹儿子雅各的讯息，他跑出来会见他。他拥抱他并亲吻他，并将他带到他的家中，在那里雅各告诉了他所有已发生的。
+
+% Jacob Marries Leah and Rachel
+\subsection*{雅各娶利亚和拉结}
+
+% Then Laban declared, “You are indeed my own flesh and blood.”
+\N 然后拉班宣告，“你确实是我自身的血肉。”
+
+% After Jacob had stayed with him a month,
+在雅各已与他呆在一起一个月后，
+% Laban said to him, “Just because you are my relative, should you work for nothing? Tell me what your wages should be.”
+\N 拉班对他说，“正因为你是我的亲戚，难道你该无偿工作吗？告诉我你的工价该是什么。”
+
+% Now Laban had two daughters; the older was named Leah, and the younger was named Rachel.
+\N 现在拉班有两个女儿；大的名叫利亚，而小的名叫拉结。
+% Leah had weak eyes, but Rachel was shapely and beautiful.
+\N 利亚眼神暗淡，但拉结身材匀称而漂亮。
+% Since Jacob loved Rachel, he answered, “I will serve you seven years for your younger daughter Rachel.”
+\N 因为雅各爱拉结，他回答，“我会为你的小女儿拉结服侍你七年。”
+
+% Laban replied, “Better that I give her to you than to another. Stay here with me.”
+\N 拉班回复，“我将她给你比给另一个要好。与我一起呆在这里。”
+% So Jacob served seven years for Rachel, yet it seemed but a few days because of his love for her.
+\N 所以雅各为拉结服侍了七年，但因为他对她的爱，这似乎只不过是几天。
+
+
 \thispagestyle{empty}
 \newpage
 
