--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1370,7 +1370,7 @@
 \N 然后使者补充说，“我会大大倍增你的后嗣以致他们会不可胜数。”
 
 % The angel of the LORD proceeded: “Behold, you have conceived and will bear a son. And you shall name him Ishmael, for the LORD has heard your cry of affliction.
-\N 耶和华的使者接着说：“看啊，你已受孕并会生一个儿子。而你必给他取名以实玛利，因为耶和华已听见你痛苦的哭喊。
+\N 耶和华的使者接着说：“看啊，你已受孕并会生一个儿子。而你必给他取名以实玛利，因为耶和华已听见你痛楚的哭喊。
 
 % He will be a wild donkey of a man, and his hand will be against everyone, and everyone’s hand against him;
 \N 他会成为一个野驴般的人，而他的手会对抗每个人，而每个人的手会对抗他；
@@ -1564,7 +1564,7 @@
 祂回复，“如果我在那里发现四十五个，我就不会摧毁它。”
 
 % Once again Abraham spoke to the LORD, “Suppose forty are found there?”
-\N 再次亚伯拉罕对耶和华讲，“假设在那里找到四十个呢？”
+\N 再一次亚伯拉罕对耶和华讲，“假设在那里找到四十个呢？”
 
 % He answered, “On account of the forty, I will not do it.”
 祂回答，“为了那四十个，我不会做这事。”
@@ -2157,7 +2157,7 @@
 \N 然后他和与他随行的人又吃又喝，并在那里过夜。
 
 % When they got up the next morning, he said, “Send me on my way to my master.”
-当他们第二天起身，他说，“送我上路回我主人那。”
+当他们第二天早晨起身，他说，“送我上路回我主人那。”
 
 % But her brother and mother said, “Let the girl remain with us ten days or so. After that, she may go.”
 \N 但她哥哥和母亲说，“让这女孩留在我们身边十天左右。之后，她才能走。”
@@ -2292,7 +2292,7 @@
 “你子宫中有两邦，而从你里面出来的两族会被分开；一族会比另一族更强大，而年长的会服侍年幼的。”
 
 % When her time came to give birth, there were indeed twins in her womb.
-\N 当她到了分娩的时间，确实在她子宫中有双胞胎。
+\N 当她到了分娩的时间，的确在她子宫中有双胞胎。
 % The first one came out red, covered with hair like a fur coat; so they named him Esau.
 \N 第一个出来是红色的，覆盖着像皮衣一样的毛发；所以他们给他取名以扫。
 % After this, his brother came out grasping Esau’s heel; so he was named Jacob. And Isaac was sixty years old when the twins were born.
@@ -2709,7 +2709,7 @@
 \subsection*{雅各娶利亚和拉结}
 
 % Then Laban declared, “You are indeed my own flesh and blood.”
-\N 然后拉班宣告，“你确实是我自身的血肉。”
+\N 然后拉班宣告，“你的确是我自身的血肉。”
 
 % After Jacob had stayed with him a month,
 在雅各已与他呆在一起一个月后，
@@ -2728,6 +2728,48 @@
 % So Jacob served seven years for Rachel, yet it seemed but a few days because of his love for her.
 \N 所以雅各为拉结服侍了七年，但因为他对她的爱，这似乎只不过是几天。
 
+% Finally Jacob said to Laban, “Grant me my wife, for my time is complete, and I want to sleep with her.”
+\N 最终雅各对拉班说，“将我的妻子许配给我，因为我的时间已完满，而我想与她同寝。”
+
+% So Laban invited all the men of that place and prepared a feast.
+\N 所以拉班邀请了那地方所有人并预备了一顿盛宴。
+% But when evening came, Laban took his daughter Leah and gave her to Jacob, and he slept with her.
+\N 但当夜晚来临，拉班带着他的女儿利亚并将她给了雅各，他就与她同寝。
+% And Laban gave his servant girl Zilpah to his daughter Leah as her maidservant.
+\N 拉班还将他的婢女悉帕给了他的女儿利亚作她的女仆。
+
+% When morning came, there was Leah! “What have you done to me?” Jacob said to Laban. “Wasn’t it for Rachel that I served you? Why have you deceived me?”
+\N 当早晨来临，那里却是利亚！“你对我做了什么？”雅各对拉班说。“难道我服侍你不是为了拉结吗？你为何欺骗我？”
+
+% Laban replied, “It is not our custom here to give the younger daughter in marriage before the older.
+\N 拉班回复，“将小女儿早于大女儿出嫁不是我们这里的习俗。”
+% Finish this week’s celebration, and we will give you the younger one in return for another seven years of work.”
+\N 完成这周的庆典，我们就会将小女儿给你，作为你再工作七年的回报。”
+
+% And Jacob did just that. He finished the week’s celebration, and Laban gave him his daughter Rachel as his wife.
+\N 而雅各就那样做了。他完成了这周的庆典，而拉班将他的女儿拉结给他作了他的妻子。
+% Laban also gave his servant girl Bilhah to his daughter Rachel as her maidservant.
+\N 拉班也将他的婢女辟拉给了他的女儿拉结作她的女仆。
+
+% Jacob slept with Rachel as well, and indeed, he loved Rachel more than Leah. So he worked for Laban another seven years.
+\N 雅各也与拉结同寝，而的确，比起利亚，他更爱拉结。所以他为拉班又工作了七年。
+
+% Reuben, Simeon, Levi, and Judah
+\subsection*{流便、西缅、利未和犹大}
+
+% When the LORD saw that Leah was unloved, He opened her womb; but Rachel was barren. 
+\N 当耶和华看见利亚不被爱，祂打开她的子宫；但拉结却不育。
+% And Leah conceived and gave birth to a son, and she named him Reuben, for she said, “The LORD has seen my affliction. Surely my husband will love me now.”
+\N 而利亚受孕并生下一个儿子，而她给他取名流便，因为她说，“耶和华已看见我的痛楚。无疑我的丈夫现在会爱我。”
+
+% Again she conceived and gave birth to a son, and she said, “Because the LORD has heard that I am unloved, He has given me this son as well.” So she named him Simeon.
+\N 她再次受孕并生下一个儿子，而她说，“因为耶和华已听见我不被爱，祂也将这个儿子赐给了我。”所以她给他取名西缅。
+
+% Once again Leah conceived and gave birth to a son, and she said, “Now at last my husband will become attached to me, because I have borne him three sons.” So he was named Levi.
+\N 利亚再一次受孕并生下一个儿子，而她说，“现在我的丈夫终于会依恋我，因为我已为他生了三个儿子。”所以他被取名利未。
+
+% And once more she conceived and gave birth to a son and said, “This time I will praise the LORD.” So she named him Judah. Then Leah stopped having children.
+\N 而她又一次受孕并生下一个儿子并说，“这次我会赞美耶和华。”所以她给他取名犹大。然后利亚停止了生育。
 
 \thispagestyle{empty}
 \newpage
