--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2667,7 +2667,7 @@
 % He looked and saw a well in the field, and near it lay three flocks of sheep, because the sheep were watered from this well. And a large stone covered the mouth of the well.
 \N 他观看并看见在田地里的一口水井，而它附近躺着三群羊，因为羊从这口水井饮水。而一块大石头盖着水井口。
 % When all the flocks had been gathered there, the shepherds would roll away the stone from the mouth of the well and water the sheep. Then they would return the stone to its place over the mouth of the well.
-\N 当所有羊群已被聚集在那里，牧羊人会把井口的石头挪开并饮羊。然后他们会将石头挪回它在井口的位置。
+\N 当所有羊群已被聚集在那里，牧羊人会把井口的石头挪开并饮羊。然后他们会将石头挪回它在井口的地方。
 
 % “My brothers,” Jacob asked the shepherds, “where are you from?”
 \N “我的兄弟，”雅各问牧羊人，“你们从哪里来？”
@@ -2770,6 +2770,33 @@
 
 % And once more she conceived and gave birth to a son and said, “This time I will praise the LORD.” So she named him Judah. Then Leah stopped having children.
 \N 而她又一次受孕并生下一个儿子并说，“这次我会赞美耶和华。”所以她给他取名犹大。然后利亚停止了生育。
+
+% Genesis 30
+\section{第三十章}
+
+% Dan and Naphtali
+\subsection*{但和拿弗他利}
+
+% When Rachel saw that she was not bearing any children for Jacob, she envied her sister. “Give me children, or I will die!” she said to Jacob.
+\N 当拉结看见她不为雅各生任何孩子，她忌妒她的姐姐。“给我孩子，否则我会死！”她对雅各说。
+
+% Jacob became angry with Rachel and said, “Am I in the place of God, who has withheld children from you?”
+\N 雅各对拉结变得愤怒并说，“我是在上帝的位置上吗？是祂已使你不生孩子。”
+
+% Then she said, “Here is my maidservant Bilhah. Sleep with her, that she may bear children for me, so that through her I too can build a family.”
+\N 然后她说，“这是我的女仆辟拉。与她同寝，使她能为我生孩子，以使我借着她也能建立一个家庭。”
+
+% So Rachel gave Jacob her servant Bilhah as a wife, and he slept with her, 
+\N 所以拉结将她的仆人辟拉给雅各做妻子，而他与她同寝，
+% and Bilhah conceived and bore him a son.
+\N 辟拉就受孕并为他生了一个儿子。
+% Then Rachel said, “God has vindicated me; He has heard my plea and given me a son.” So she named him Dan.
+\N 然后拉结说，“上帝已洗清我；祂已听见我的恳请而赐给我一个儿子。”所以她给他取名但。
+
+% And Rachel’s servant Bilhah conceived again and bore Jacob a second son.
+\N 而拉结的仆人辟拉再次受孕并为雅各生了第二个儿子。
+% Then Rachel said, “In my great struggles, I have wrestled with my sister and won.” So she named him Naphtali.
+\N 然后拉结说，“在我巨大的挣扎中，我已与我的姐姐角力并取胜。”所以她给他取名拿弗他利。
 
 \thispagestyle{empty}
 \newpage
