--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1649,7 +1649,7 @@
 % But Lot replied, “No, my lords, please!
 \N 但罗得回复，“我主，请不要！
 % Your servant has indeed found favor in your sight, and you have shown me great kindness by sparing my life. But I cannot run to the mountains; the disaster will overtake me, and I will die.
-\N 你的仆人的确已在你视域中得青睐，而你已由保全我的性命向我展示巨大的慈爱。但我无法跑到山里；这灾难会赶上我，而我会死。
+\N 你的仆人的确已在你视域中得青睐，而你已由保全我的性命向我展示巨大的宽仁。但我无法跑到山里；这灾难会赶上我，而我会死。
 % Look, there is a town nearby where I can flee, and it is a small place. Please let me flee there—is it not a small place? Then my life will be saved.”
 \N 看，附近有一个小镇我能逃，而它是一个小地方。请让我逃到那里---它不是一个小地方吗？然后我的性命就会被拯救。”
 
@@ -1827,7 +1827,7 @@
 % At that time Abimelech and Phicol the commander of his army said to Abraham, “God is with you in all that you do.
 \N 在那时亚比米勒和他军队的指挥官非各对亚伯拉罕说，“上帝在你做的所有中都与你同在。
 % Now, therefore, swear to me here before God that you will not deal falsely with me or my children or descendants. Show to me and to the country in which you reside the same kindness that I have shown to you.”
-\N 现在，因此，在这里在上帝面前对我发誓你不会虚假地对付我或我的儿女或后代。向我并向你定居的国家展示我已展示给你的相同的良善。”
+\N 现在，因此，在这里在上帝面前对我发誓你不会虚假地对付我或我的儿女或后代。向我并向你定居的国家展示我已展示给你的相同的宽仁。”
 
 % And Abraham replied, “I swear it.”
 \N 而亚伯拉罕回复，“我对此发誓。”
@@ -2035,11 +2035,11 @@
 % As evening approached, he made the camels kneel down near the well outside the town at the time when the women went out to draw water.
 \N 当夜晚临近，他使骆驼在镇外水井附近跪下，那时女人们正外出汲水。
 % “O LORD, God of my master Abraham,” he prayed, “please grant me success today, and show kindness to my master Abraham.
-\N “耶和华啊，我主人亚伯拉罕的上帝，”他祷告，“今天请准予我成功，并将良善展示给我的主人亚伯拉罕。
+\N “耶和华啊，我主人亚伯拉罕的上帝，”他祷告，“今天请准予我成功，并将宽仁展示给我的主人亚伯拉罕。
 % Here I am, standing beside the spring, and the daughters of the townspeople are coming out to draw water.
 \N 我在这里，站在泉水旁，而镇民的女儿们正过来汲水。
 % Now may it happen that the girl to whom I say, ‘Please let down your jar that I may drink,’ and who responds, ‘Drink, and I will water your camels as well’—let her be the one You have appointed for Your servant Isaac. By this I will know that You have shown kindness to my master.”
-\N 现在愿这样的事发生：我对那个女孩说，‘请放下你的水罐使我能饮，’而她回应，‘喝吧，我还会饮你的骆驼’---让她成为祢为祢的仆人以撒已指定的那位。由此我会知道祢已将良善展示给我的主人。”
+\N 现在愿这样的事发生：我对那个女孩说，‘请放下你的水罐使我能饮，’而她回应，‘喝吧，我还会饮你的骆驼’---让她成为祢为祢的仆人以撒已指定的那位。由此我会知道祢已将宽仁展示给我的主人。”
 
 % Rebekah Is Chosen
 \subsection*{利百加被选}
@@ -2080,7 +2080,7 @@
 % Then the man bowed down and worshiped the LORD,
 \N 然后那人下拜并敬拜耶和华，
 % saying, “Blessed be the LORD, the God of my master Abraham, who has not withheld His kindness and faithfulness from my master. As for me, the LORD has led me on the journey to the house of my master’s relatives.”
-\N 说，“耶和华、我主人亚伯拉罕的上帝是当受崇拜的！祂未曾向我的主人扣留祂的良善和信实。至于我，耶和华已带领我在到我主人亲戚住所的途中。”
+\N 说，“耶和华、我主人亚伯拉罕的上帝是当受崇拜的！祂未曾向我的主人扣留祂的宽仁和信实。至于我，耶和华已带领我在到我主人亲戚住所的途中。”
 
 % The girl ran and told her mother’s household about these things.
 \N 那女孩跑去把这些事情告诉了她母亲家室的人。
@@ -2142,7 +2142,7 @@
 \N 然后我下拜并敬拜耶和华；而我崇拜耶和华、我主人亚伯拉罕的上帝，祂带领我在为他的儿子取我主人兄弟的孙女的正路上。
 
 % Now if you will show kindness and faithfulness to my master, tell me; but if not, let me know, so that I may go elsewhere.”
-\N 现在如果你们愿向我主人展示良善和信实，请告诉我；但如果不，请让我知道，以使我能去其他地方。”
+\N 现在如果你们愿向我主人展示宽仁和信实，请告诉我；但如果不，请让我知道，以使我能去其他地方。”
 
 % Laban and Bethuel answered, “This is from the LORD; we have no choice in the matter.
 \N 拉班和彼土利回答：“这来自耶和华；我们在这事上没有选择。
@@ -2307,7 +2307,7 @@
 \subsection*{以扫出卖他的长子权}
 
 % One day, while Jacob was cooking some stew, Esau came in from the field and was famished.
-\N 一天，雅各正在炖一些汤时，以扫从田野，而他饿极了。
+\N 一天，雅各正在炖一些汤时，以扫从田野进门，而他饿极了。
 % He said to Jacob, “Let me eat some of that red stew, for I am famished.” (That is why he was also called Edom.)
 \N 他对雅各说，“让我吃一些那个红汤，因为我饿极了。”（这是为何他也被称为以东。）
 
@@ -2550,7 +2550,7 @@
 “我是以扫，你的头生的儿子，”他回答。
 
 % Isaac began to tremble violently and said, “Who was it, then, who hunted the game and brought it to me? Before you came in, I ate it all and blessed him—and indeed, he will be blessed!”
-\N 以撒开始剧烈地战兢并说，“那刚才猎取野味并带给我的是谁？在你进来之前，我将它全都吃了并祝福了他---而的确，他会被祝福！”
+\N 以撒开始剧烈地战兢并说，“那刚才猎取野味并带给我的是谁？在你进门之前，我将它全都吃了并祝福了他---而的确，他会被祝福！”
 
 % When Esau heard his father’s words, he let out a loud and bitter cry and said to his father, “Bless me too, O my father!”
 \N 当以扫听见他父亲的言词，他发出了一声高亢而苦涩的哭嚎并对他父亲说，“我的父亲啊，也祝福我吧！”
@@ -2797,6 +2797,60 @@
 \N 而拉结的仆人辟拉再次受孕并为雅各生了第二个儿子。
 % Then Rachel said, “In my great struggles, I have wrestled with my sister and won.” So she named him Naphtali.
 \N 然后拉结说，“在我巨大的挣扎中，我已与我的姐姐角力并取胜。”所以她给他取名拿弗他利。
+
+% Gad and Asher
+\subsection*{迦得和亚设}
+
+% When Leah saw that she had stopped having children, she gave her servant Zilpah to Jacob as a wife.
+\N 当利亚看见她已停止生育时，她将她的仆人悉帕给了雅各做妻子。
+% And Leah’s servant Zilpah bore Jacob a son.
+\N 而利亚的仆人悉帕为雅各生了一个儿子。
+% Then Leah said, “How fortunate!” So she named him Gad.
+\N 然后利亚说，“好运来！”所以她给他取名迦得。
+
+% When Leah’s servant Zilpah bore Jacob a second son,
+\N 当利亚的仆人悉帕为雅各生了第二个儿子时，
+% Leah said, “How happy I am! For the women call me happy.” So she named him Asher.
+\N 利亚说，“我真幸福！因为女人们称我幸福。”所以她给他取名亚设。
+
+% Now during the wheat harvest, Reuben went out and found some mandrakes in the field. When he brought them to his mother, Rachel begged Leah, “Please give me some of your son’s mandrakes.”
+\N 现在在麦子收获期间，流便外出并在田地中找到了一些茄参。当他将它们带给他母亲时，拉结乞求利亚，“请给我一些你儿子的茄参。”
+
+% But Leah replied, “Is it not enough that you have taken away my husband? Now you want to take my son’s mandrakes as well?”
+\N 但利亚回复，“你已夺去我的丈夫还不够吗？现在你还想取走我儿子的茄参？”
+
+% “Very well,” said Rachel, “he may sleep with you tonight in exchange for your son’s mandrakes.”
+“好吧，”拉结说，“今晚他能与你同寝作为你儿子茄参的交换。”
+
+% When Jacob came in from the field that evening, Leah went out to meet him and said, “You must come with me, for I have hired you with my son’s mandrakes.” So he slept with her that night.
+\N 那晚当雅各从田地进门时，利亚出去遇见他并说，“你必须跟我来，因为我已用我儿子的茄参雇了你。”所以他那晚与她同寝。
+
+% Issachar, Zebulun, and Dinah
+\subsection*{以萨迦、西布伦和底拿}
+
+% And God listened to Leah, and she conceived and bore a fifth son to Jacob.
+\N 而上帝垂听利亚，她就受孕并为雅各生了第五个儿子。
+% Then Leah said, “God has rewarded me for giving my maidservant to my husband.” So she named him Issachar.
+\N 然后利亚说，“上帝为我将我的女仆给我的丈夫而赏赐了我。”所以她给他取名以萨迦。
+
+% Again Leah conceived and bore a sixth son to Jacob.
+\N 利亚再次受孕并为雅各生了第六个儿子。
+% “God has given me a good gift,” she said. “This time my husband will honor me, because I have borne him six sons.” And she named him Zebulun.
+\N “上帝已将一份美好的礼物赐给我，”她说。“这次我的丈夫会敬重我，因为我已为他生了六个儿子。”而她给他取名西布伦。
+
+% After that, Leah gave birth to a daughter and named her Dinah.
+\N 在那之后，利亚生下了一个女儿并给她取名底拿。
+
+% Joseph
+\subsection*{约瑟}
+
+% Then God remembered Rachel. He listened to her and opened her womb,
+\N 然后上帝记念拉结。祂垂听她并打开了她的子宫，
+% and she conceived and gave birth to a son. “God has taken away my shame,” she said.
+\N 而她受孕并生下来一个儿子。“上帝已带走我的耻辱，”她说。
+% She named him Joseph, and said, “May the LORD add to me another son.”
+\N 她给他取名约瑟，并说，“愿耶和华再添一个儿子给我。”
+
 
 \thispagestyle{empty}
 \newpage
