--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -2851,6 +2851,41 @@
 % She named him Joseph, and said, “May the LORD add to me another son.”
 \N 她给他取名约瑟，并说，“愿耶和华再添一个儿子给我。”
 
+% Jacob Prospers
+\subsection*{雅各兴旺}
+
+% Now after Rachel had given birth to Joseph, Jacob said to Laban, “Send me on my way so I can return to my homeland.
+\N 现在在拉结已生下约瑟后，雅各对拉班说，“送我上路，让我能返回我的家园。
+% Give me my wives and children for whom I have served you, that I may go on my way. You know how hard I have worked for you.”
+\N 将我的妻子和孩子给我，我为他们而已服侍你，以使我能走上我的路。你知道我已多么辛苦地为你工作。”
+
+% But Laban replied, “If I have found favor in your eyes, please stay. I have learned by divination that the LORD has blessed me because of you.”
+\N 但拉班回复，“如果我已在你眼中得青睐，请留下。我由占卜已得知耶和华因为你而已祝福我。”
+% And he added, “Name your wages, and I will pay them.”
+\N 而他补充说，“指明你的工价，而我会支付它们。”
+
+% Then Jacob answered, “You know how I have served you and how your livestock have thrived under my care.
+\N 然后雅各回答，“你知道我已如何服侍你而你的牲畜在我的护理下如何兴盛。
+% Indeed, you had very little before my arrival, but now your wealth has increased many times over. The LORD has blessed you wherever I set foot. But now, when may I also provide for my own household?”
+\N 的确，你在我到来之前所有很少，但现在你的钱财已增长许多倍。无论我在哪里落脚，耶和华都已祝福你。但现在，我何时也能供养我自身的家室？”
+
+% “What can I give you?” Laban asked.
+\N “我能给你什么呢？”拉班问。
+
+% “You do not need to give me anything,” Jacob replied. “If you do this one thing for me, I will keep on shepherding and keeping your flocks. 
+“你不需要给我任何东西，”雅各回复。“如果你为我做这一件事，我会继续牧养并看护你的羊群。
+% Let me go through all your flocks today and remove from them every speckled or spotted sheep, every dark-colored lamb, and every spotted or speckled goat. These will be my wages.
+\N 让我今天查遍你所有的羊群并从它们中挑出每只带斑点或花斑的绵羊，每只深色的羔羊，以及每只带斑点或花斑的山羊。这些将会是我的工价。
+% So my honesty will testify for me when you come to check on my wages in the future. If I have any goats that are not speckled or spotted, or any lambs that are not dark-colored, they will be considered stolen.”
+\N 所以当你在将来来检查我的工价时，我的诚实会为我作证。如果我有任何不是带斑点或花斑的山羊，或任何不是深色的羔羊，它们就会被认为是偷的。”
+
+% “Agreed,” said Laban. “Let it be as you have said.”
+\N “成交，”拉班说，“就照你已说的去办。”
+
+% That very day Laban removed all the streaked or spotted male goats and every speckled or spotted female goat—every one that had any white on it—and every dark-colored lamb, and he placed them under the care of his sons.
+\N 就在当天拉班将所有带条纹或斑点的公山羊和每个带斑点或花斑的母山羊---每一个身上有白色的---以及每个深色的羔羊挑出来，而他将它们安置给他儿子们的照看。
+% Then he put a three-day journey between himself and Jacob, while Jacob was shepherding the rest of Laban’s flocks.
+\N 然后雅各在牧养拉班其余羊群时，他使他自己和雅各之间相隔了三天的路程。
 
 \thispagestyle{empty}
 \newpage
